--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,8 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: $blue;
+  background: white;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -8,5 +10,11 @@
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 40px;
+  width: 60px;
+  padding-left: 2rem;
+}
+
+.nav-link {
+  border-radius: 50px;
+  background-color: $orange;
 }
