--- a/app/assets/stylesheets/pages/_cocktails.scss
+++ b/app/assets/stylesheets/pages/_cocktails.scss
@@ -1,5 +1,15 @@
 
+body {
+  background-image: asset-url('wood_base.jpeg');
+  background-size: cover;
+}
+
+
 .ingredients-list {
-  background-color: white;
+  // background-color: white;
+  padding: 2rem;
+}
+
+.dose-form {
   padding: 2rem;
 }
