--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,14 +1,20 @@
 <div class="container">
-  <div class="row">
+  <div class="row mt-4">
     <% @cocktails.each do |cocktail| %>
-      <div class="col-sm-12 col-md-6 col-xl-4 c">
+      <div class="col-sm-12 col-md-6 col-xl-4">
         <%= link_to cocktail_path(cocktail) do %>
-          <div class="card-category m-2" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+          <div class="card-category m-4" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
             <%= cocktail.name %>
           </div>
         <% end %>
       </div>
     <% end %>
+    <div class="col-sm-12 col-md-6 col-xl-4">
+      <%= link_to new_cocktail_path do %>
+        <div class="card-category m-4" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(#)">
+          Add a cocktail
+        </div>
+      <% end %>
+    </div>
   </div>
-<%= link_to "Add your own mixture", new_cocktail_path, class: "btn btn-primary m-2" %>
 </div>
