--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -28,11 +28,11 @@
   align-items: center;
 }
 
-.card-product img {
-  height: 100%;
-  width: 360px;
-  object-fit: cover;
-}
+// .card-product img {
+//   height: 100%;
+//   width: 360px;
+//   object-fit: cover;
+// }
 
 .card-product h2 {
   font-size: 16px;
