--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,26 +1,32 @@
-<div class="container">
-  <h1> <%= @cocktail.name %></h1>
-  <div class="ingredients-list">
-    <% if (@cocktail.doses.length > 0) %>
-      <% @cocktail.doses.each do |dose| %>
-        <div class="card-product">
-          <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
-          <div class="card-product-infos">
-            <h2><%= dose.ingredient.name %></h2>
-            <p> <%= dose.description %></p>
-          </div>
-          <%= link_to dose_path(dose), method: :delete do %>
-            <i class="fas fa-minus-circle"></i>
+<div class="container d-flex flex-column justify-content-center align-items-center">
+  <div class="cocktail-infos">
+    <h1> <%= @cocktail.name %></h1>
+
+  </div>
+  <div class="ingredients d-flex justify-content-around align-items-center w-100 px-5">
+    <div class="ingredients-container">
+      <div class="ingredients-list">
+        <% if (@cocktail.doses.length > 0) %>
+          <% @cocktail.doses.each do |dose| %>
+            <div class="card-product px-4">
+              <!-- <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" /> -->
+              <div class="card-product-infos">
+                <h2><%= dose.ingredient.name %></h2>
+                <p> <%= dose.description %></p>
+              </div>
+              <%= link_to dose_path(dose), method: :delete do %>
+                <i class="fas fa-minus-circle"></i>
+              <% end %>
+            </div>
           <% end %>
-        </div>
-      <% end %>
-    <% else %>
-      <p>Composition encore secrète...</p>
-    <% end %>
+        <% else %>
+          <p>Composition encore secrète...</p>
+        <% end %>
+      </div>
+    </div>
+    <div class="dose-form m-2 list-inline">
+      <%= render "dose_form", cocktail: @cocktail, dose: @dose %>
+    </div>
   </div>
-  <div class="dose-form m-2">
-    <%= render "dose_form", cocktail: @cocktail, dose: @dose %>
-<!--     <%= link_to "Add a new dose in the your mix", new_cocktail_dose_path(@cocktail), {class: "btn btn-danger my-2"} %> -->
-  </div>
-  <%= link_to "Back to the barman's list", cocktails_path, {class: "btn btn-primary my-2"} %>
+ <!--  <%= link_to "Back to the barman's list", cocktails_path, {class: "btn btn-primary my-2"} %> -->
 </div>
