--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <%= link_to "Add your own mixture", new_cocktail_path, class: "nav-link" %>
+        <%= link_to "Back to the strain", cocktails_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item active">
+        <%= link_to "Add your own mix", new_cocktail_path, class: "nav-link" %>
       </li>
 <!--       <li class="nav-item">
         <%= link_to "Messages", "#", class: "nav-link" %>
