--- a/app/views/cocktails/_dose_form.html.erb
+++ b/app/views/cocktails/_dose_form.html.erb
@@ -2,5 +2,5 @@
 <%= simple_form_for [cocktail, dose] do |f| %>
   <%= f.association :ingredient %>
   <%= f.input :description %>
-  <%= f.submit "Add a dose of pleasure", class: "btn btn-danger" %>
+  <%= f.submit "Add a dose of pleasure", class: "btn nav-link" %>
 <% end %>
