--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -20,12 +20,15 @@
 }
 
 .card-product {
+  flex-grow: 1;
   overflow: hidden;
-  height: 120px;
-  background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  background: #f6f6f6;
+  // box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  padding-left: 0;
+  width: 450px;
 }
 
 // .card-product img {
@@ -34,20 +37,25 @@
 //   object-fit: cover;
 // }
 
-.card-product h2 {
-  font-size: 16px;
-  font-weight: bold;
-  margin: 0;
-}
+// .card-product h2 {
+//   font-size: 12px;
+//   font-weight: bold;
+//   margin: 0;
+// }
 
 .card-product p {
   font-size: 12px;
   line-height: 1.4;
-  opacity: .7;
-  margin-bottom: 0;
-  margin-top: 8px;
+  // opacity: .7;
+  margin: 0;
 }
 
 .card-product .card-product-infos {
   padding: 16px;
+  display: flex;
+  align-items: center;
+  a {
+  color: $orange;
+  font-size: 24px;
+  }
 }
