--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -2,6 +2,6 @@
 <div class="container">
   <%= simple_form_for(@cocktail) do |f| %>
     <%= f.input :name %>
-    <%= f.submit "Generate your mixture", class: "btn btn-primary" %>
+    <%= f.submit "Generate your mixture", class: "btn nav-link" %>
   <% end %>
 </div>
