--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -5,18 +5,18 @@
   </div>
   <div class="ingredients d-flex justify-content-around align-items-center w-100 px-5">
     <div class="ingredients-container">
+      <div class="glass-img"> </div>
       <div class="ingredients-list">
         <% if (@cocktail.doses.length > 0) %>
           <% @cocktail.doses.each do |dose| %>
             <div class="card-product px-4">
               <!-- <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" /> -->
+              <p> <strong><%= dose.ingredient.name %></strong> - <%= dose.description %></p>
               <div class="card-product-infos">
-                <h2><%= dose.ingredient.name %></h2>
-                <p> <%= dose.description %></p>
+                <%= link_to dose_path(dose), method: :delete do %>
+                  <i class="fas fa-hand-point-right"></i>
+                <% end %>
               </div>
-              <%= link_to dose_path(dose), method: :delete do %>
-                <i class="fas fa-minus-circle"></i>
-              <% end %>
             </div>
           <% end %>
         <% else %>
