--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -3,9 +3,15 @@
     <% @cocktails.each do |cocktail| %>
       <div class="col-sm-12 col-md-6 col-xl-4">
         <%= link_to cocktail_path(cocktail) do %>
-          <div class="card-category m-4" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
-            <%= cocktail.name %>
-          </div>
+          <% if cocktail.photo.attached? %>
+            <div class="card-category m-4" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path cocktail.photo.key, height: 300, width: 400, crop: :fill %>')">
+              <%= cocktail.name %>
+            </div>
+          <% else %>
+            <div class="card-category m-4" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= image_path('base_image.jpg')%>'); background-size: cover; background-position: center">
+              <%= cocktail.name %>
+            </div>
+          <% end %>
         <% end %>
       </div>
     <% end %>
