--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container d-flex flex-column justify-content-center align-items-center">
-  <div class="cocktail-infos">
+  <div class="cocktail-infos" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @cocktail.photo.key, height: 300, width: 400, crop: :fill %>')">
     <h1> <%= @cocktail.name %></h1>
 
   </div>
@@ -22,6 +22,7 @@
         <div class="card-product px-4">
           <p> <strong>Composition encore secrète...</strong></p>
           <div class="card-product-infos">
+            <i class="fas fa-question-circle"></i>
           </div>
         </div>
         <% end %>
